--- a/templates/apply_filter.html
+++ b/templates/apply_filter.html
@@ -79,8 +79,6 @@
 </html>
 
  -->
-
-
  <!DOCTYPE html>
  <html lang="en">
  <head>
@@ -93,10 +91,16 @@
              background-color: #f8f8f8;
              text-align: center;
              margin: 20px;
+             background-image: url('/static/stock_trading_image6.png'); /* Adjust the path accordingly */
+             background-size: cover;
+             background-position: center;
+             background-repeat: repeat;
          }
  
          h1 {
-             color: #333;
+             color: #fff; /* Change the text color to white */
+             text-shadow: 2px 2px 2px #333; /* Add text shadow for better visibility */
+             margin-top: 20px; /* Adjust the margin to give more space */
          }
  
          form {
